--- a/_posts/2016-02-29-scorpion.markdown
+++ b/_posts/2016-02-29-scorpion.markdown
@@ -25,4 +25,4 @@ tags: [tiny, beast, cr0]
 
 **Actions** 
 
-Sting. Melee Weapon Attack: +2 to hit, reach 5 ft., one creature. Hit: 1 piercing damage, and the target must make a DC 9 Constitution saving throw, taking 4 (1d8) poison damage on a failed save, or half as much damage on a successful one.
+***Sting.*** Melee Weapon Attack: +2 to hit, reach 5 ft., one creature. Hit: 1 piercing damage, and the target must make a DC 9 Constitution saving throw, taking 4 (1d8) poison damage on a failed save, or half as much damage on a successful one.
