abjurer, swarm of cranium rats

--- a/_posts/2017-09-10-abjurer.markdown
+++ b/_posts/2017-09-10-abjurer.markdown
@@ -45,7 +45,7 @@ Cantrips (at will): blade ward. dancing lights, mending, message, ray of frost
 
 *Abjuration spell of 1st level or higher
 
-***Arcane Ward.*** The abjurer has a magical ward that has 30 hit points. Whenever the abjurer takes damage, the ward takes the damage instead. If the ward is reduced to 0 hit points, the abjurer takes any remaining damage. When the abjurer casts an . abjuration spell of 1st level or higher, the ward regains a number of hit points equal to twice the level of the spell.
+***Arcane Ward.*** The abjurer has a magical ward that has 30 hit points. Whenever the abjurer takes damage, the ward takes the damage instead. If the ward is reduced to 0 hit points, the abjurer takes any remaining damage. When the abjurer casts an abjuration spell of 1st level or higher, the ward regains a number of hit points equal to twice the level of the spell.
 
 **Actions**
 
