added page number functionality and strahd page numbers

--- a/_posts/2017-09-10-crag-cat.markdown
+++ b/_posts/2017-09-10-crag-cat.markdown
@@ -3,6 +3,7 @@ layout: post
 title: "Crag Cat"
 date: 2017-09-10
 tags: [large, beast, cr1, storm-kings-thunder]
+page_number: 17
 ---
 
 **Large beast, unaligned**
