--- a/_posts/2017-09-10-madam-eva.markdown
+++ b/_posts/2017-09-10-madam-eva.markdown
@@ -3,6 +3,7 @@ layout: post
 title: "Madam Eva"
 date: 2017-09-10
 tags: [medium, humanoid, cr10, curse-of-strahd]
+page_number: 233
 ---
 
 **Medium humanoid (human), chaotic neutral**
