--- a/_posts/2017-09-10-rictavio.markdown
+++ b/_posts/2017-09-10-rictavio.markdown
@@ -3,6 +3,7 @@ layout: post
 title: "Rictavio"
 date: 2017-09-10
 tags: [medium, humanoid, cr5, curse-of-strahd]
+page_number: 238
 ---
 
 **Medium humanoid (human), lawful good**
