--- a/_posts/2017-09-10-rahadin.markdown
+++ b/_posts/2017-09-10-rahadin.markdown
@@ -3,6 +3,7 @@ layout: post
 title: "Rahadin"
 date: 2017-09-10
 tags: [medium, humanoid, cr10, curse-of-strahd]
+page_number: 236
 ---
 
 **Medium humanoid (elf), lawful evil**
