5 new MToF creatures
I realized this is taking quite a while and is prone to error.  I want to commit this and then look for a way to parse the data and generate the correct format files.

--- a/_posts/2018-11-30-allip.markdown
+++ b/_posts/2018-11-30-allip.markdown
@@ -3,6 +3,7 @@ layout: post
 title: "Allip"
 date: 2018-11-30
 tags: [medium, undead, cr5, mordenkainens-tome-of-foes]
+page_number: 116
 ---
 
 **Medium undead, neutral evil**
@@ -26,6 +27,8 @@ tags: [medium, undead, cr5, mordenkainens-tome-of-foes]
 **Damage Immunities** cold , necrotic, poison
 
 **Condition Immunities** charmed, exhaustion, frightened, grappled, paralyzed, petrified, poisoned, prone, restrained
+
+**Senses** darkvision 60 ft ., passive Perception 15
 
 **Languages** the languages it knew in life
 
